--- a/.github/workflows/actionstarter-01.yml
+++ b/.github/workflows/actionstarter-01.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: githyb-runner
+name: github-runner
 
 # Controls when the workflow will run
 on:
